fix: manual code adjustment

--- a/public/game.html
+++ b/public/game.html
@@ -4926,7 +4926,7 @@
             }
         }
     </script>
-
+    <script>
     // Add the addDiamonds JS function
     window.addDiamonds = function() {
       const username = document.getElementById('diamondUsername').value;
@@ -4939,5 +4939,6 @@
       document.getElementById('diamondUsername').value = '';
       document.getElementById('diamondAmount').value = '';
     };
+    </script>
 </body>
 </html>
