--- a/public/blog.html
+++ b/public/blog.html
@@ -6,6 +6,7 @@
     <title>בלוג - Jumpi</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
+    <script src="https://cdn.userway.org/widget.js" data-account="UGVjn51mMS"></script>
     <style>
         .blog-card {
             background: rgba(255, 255, 255, 0.95);
@@ -67,18 +68,10 @@
         <div class="container">
             <div class="blog-card fade-in-up">
                 <div class="coming-soon">
-                    <div class="coming-soon-icon">📝</div>
-                    <h2>בלוג Jumpi</h2>
-                    <p>בלוג עם חדשות, עדכונים, טיפים ומדריכים על עולם Jumpi</p>
-                    <p><strong>בקרוב!</strong></p>
-                    <p>אנחנו עובדים על תוכן איכותי עבורכם. בקרוב תוכלו לקרוא:</p>
-                    <ul style="text-align: right; color: #666; line-height: 1.8;">
-                        <li>חדשות ועדכונים על המשחק</li>
-                        <li>טיפים ואסטרטגיות למשחק</li>
-                        <li>מדריכים לשיפור הדמות</li>
-                        <li>סיפורים מהקהילה</li>
-                        <li>ראיונות עם שחקנים מובילים</li>
-                    </ul>
+                    <div class="coming-soon-icon">🔒</div>
+                    <h2>הבלוג בשיפוצים</h2>
+                    <p>אנחנו עובדים על הבלוג החדש שלנו</p>
+                    <p><strong>בקרוב נחזור!</strong></p>
                 </div>
                 
                 <div class="back-link">
