--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <title>התחברות - Jumpi</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
+    <script src="https://cdn.userway.org/widget.js" data-account="UGVjn51mMS"></script>
 </head>
 <body>
     <div class="main-content">
