--- a/public/register.html
+++ b/public/register.html
@@ -133,6 +133,12 @@
   </style>
 </head>
 <body>
+  <script src="https://cdn.userway.org/widget.js" data-account="UGVjn51mMS"></script>
+  <script src="/components/Toolbar.js"></script>
+  <script>
+    // Initialize toolbar
+    new Toolbar();
+  </script>
   <div class="bg-animated"></div>
   <main class="register-main">
     <section class="register-card" aria-label="הרשמה">
