--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>" />
+    <script src="https://cdn.userway.org/widget.js" data-account="UGVjn51mMS"></script>
     <style>
       body { font-family: 'Fredoka', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
     </style>
@@ -24,9 +25,10 @@
             <a href="#" class="nav-link"><span class="nav-icon">👪</span> להורים</a>
             <a href="/accessibility.html" class="nav-link"><span class="nav-icon">♿</span> נגישות</a>
             <a href="#" class="nav-link"><span class="nav-icon">❓</span> עזרה</a>
+            <a href="/store" class="nav-link"><span class="nav-icon">🛒</span> חנות</a>
         </div>
         <div class="navbar-right">
-            <a href="#" class="btn shiny-btn navbar-play-btn">התחל לשחק</a>
+            <a href="/game" class="btn shiny-btn navbar-play-btn">התחל לשחק</a>
         </div>
     </nav>
 
