הוספת קישור לתקנון ואישור הורים בהרשמה

--- a/public/register.html
+++ b/public/register.html
@@ -196,7 +196,11 @@
             </div>
             <label class="terms-label">
               <input type="checkbox" id="regTerms" required aria-label="הסכמה לתקנון" class="reg-checkbox"> 
-              אני מסכים/ה לתקנון האתר
+              אני מסכים/ה <a href="/terms" target="_blank" rel="noopener" tabindex="-1" style="text-decoration:underline;color:#4b3869;">לתקנון האתר</a>
+            </label>
+            <label class="terms-label">
+              <input type="checkbox" id="regParental" required aria-label="אישור הורים למשתמשים מתחת לגיל 18" class="reg-checkbox">
+              אני מאשר/ת כי קיבלתי אישור מההורים לשימוש במשחק (למתחת לגיל 18)
             </label>
             <button type="submit" class="continue-btn" id="submitBtn">הרשמה</button>
           </form>
