החלפת אימוג'ים לאייקונים מקצועיים בעמוד הראשי

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jumpi - עולם וירטואלי מרתק</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
@@ -21,11 +22,11 @@
             <img src="/images/logo.png" alt="Jumpi Logo" class="navbar-logo-img" />
         </div>
         <div class="navbar-center">
-            <a href="#" class="nav-link"><span class="nav-icon">👥</span> קהילה</a>
-            <a href="#" class="nav-link"><span class="nav-icon">👪</span> להורים</a>
-            <a href="/accessibility.html" class="nav-link"><span class="nav-icon">♿</span> נגישות</a>
-            <a href="#" class="nav-link"><span class="nav-icon">❓</span> עזרה</a>
-            <a href="/store" class="nav-link"><span class="nav-icon">🛒</span> חנות</a>
+            <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-users"></i></span> קהילה</a>
+            <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-child-reaching"></i></span> להורים</a>
+            <a href="/accessibility.html" class="nav-link"><span class="nav-icon"><i class="fas fa-universal-access"></i></span> נגישות</a>
+            <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-question-circle"></i></span> עזרה</a>
+            <a href="/store" class="nav-link"><span class="nav-icon"><i class="fas fa-store"></i></span> חנות</a>
         </div>
         <div class="navbar-right">
             <a href="/game" class="btn shiny-btn navbar-play-btn">התחל לשחק</a>
