עדכון קישורי פוטר: דף הבית, בלוג, צור קשר, הסרת פרטיות

--- a/public/index.html
+++ b/public/index.html
@@ -66,10 +66,9 @@
     <footer class="home-footer">
         <div class="footer-inner">
             <div class="footer-links">
-                <a href="#" class="footer-link">דף הבית</a>
-                <a href="#" class="footer-link">בלוג</a>
-                <a href="#" class="footer-link">צור קשר</a>
-                <a href="#" class="footer-link">פרטיות</a>
+                <a href="/" class="footer-link">דף הבית</a>
+                <a href="/blog" class="footer-link">בלוג</a>
+                <a href="/contact" class="footer-link">צור קשר</a>
             </div>
             <div class="footer-socials">
                 <a href="#" class="footer-social-btn"><img src="/images/discord.png" alt="Discord" /></a>
