--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-users"></i></span> קהילה</a>
             <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-user-shield"></i></span> להורים</a>
             <a href="/accessibility.html" class="nav-link"><span class="nav-icon"><i class="fas fa-universal-access"></i></span> נגישות</a>
-            <a href="#" class="nav-link"><span class="nav-icon"><i class="fas fa-question-circle"></i></span> עזרה</a>
+            <a href="/FAQ/index.html" class="nav-link"><span class="nav-icon"><i class="fas fa-question-circle"></i></span> עזרה</a>
             <a href="/store" class="nav-link"><span class="nav-icon"><i class="fas fa-store"></i></span> חנות</a>
         </div>
         <div class="navbar-right">
