הוספת שאלה חדשה ל-FAQ: איך מתכתב עם משתמשים במשחק

--- a/public/FAQ/index.html
+++ b/public/FAQ/index.html
@@ -80,6 +80,9 @@
       <a class="faq-question" href="/FAQ/CreateAccount.html">
         <i class="fas fa-user-plus"></i> איך יוצרים משתמש חדש?
       </a>
+      <a class="faq-question" href="/FAQ/sentChat.html">
+        <i class="fas fa-comments"></i> איך אני מתכתב עם משתמשים במשחק?
+      </a>
     </div>
     <div style="margin-top:32px;text-align:center;font-size:1.1rem;color:#4b3869;background:#e0e7ff;padding:18px 12px;border-radius:12px;">
       לא מצאת את התשובה שחיפשת? <a href="/contact.html" style="color:#5a3e85;text-decoration:underline;font-weight:bold;">פנה אלינו כאן</a>
